# vector-ai-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
docs/: ARCHITECTURE.md
scripts/: create_embeddings.py  data_generator.py  deploy_index.py  generate_data.py  run_tests.sh  setup_gcp.sh  start_service.sh  stop_service.sh
src/: __init__.py
src/agent/: __init__.py  job_agent.py  tools.py
src/api/: __init__.py  main.py  routes.py
src/models/: __init__.py  candidate.py  job.py
src/services/: __init__.py  async_embedding_service.py  cache_service.py  candidate_service.py  embeddings.py  job_service.py  matching_service.py  vector_search.py
static/: chat.html
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_models.py  test_services.py
